# minekuai-qqbot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml
.github/workflows/: tests.yml
bot/: .env.example  Dockerfile  bot.py  pyproject.toml  requirements-dev.txt  requirements-security.txt
bot/plugins/minekuai/: __init__.py  audit.py  auth.py  client.py  config.py  credentials.py  idle_watcher.py  mc_profile.py  permission.py  servers.py
bot/tests/: test_client.py  test_idle_watcher.py  test_permission.py  test_servers.py
deploy/: minekuai-bot.service
docs/: DEPLOY-LINUX.md  SETUP.md
