[project]
name = "minekuai-qqbot"
version = "0.1.0"
description = "通过 QQ 机器人控制麦块联机服务器"
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7.0",
    "playwright>=1.40.0",
    "mcstatus>=11.0.0",
    "Pillow>=10.0.0",
]
